[package]
name = "akin"
description = "A crate for writing repetitive code easier and faster."
version = "0.1.0"
license = "MIT"
edition = "2021"
repository = "https://github.com/lyonsyonii/akin"
documentation = "https://docs.rs/akin"

[lib]
proc-macro = true

[dependencies]
syn = "1.0.86"
proc-macro-error = "1.0.4"